postarkovska kontrola do konce

--- a/diplomka-text/fi-pdflatex.tex
+++ b/diplomka-text/fi-pdflatex.tex
@@ -983,7 +983,7 @@ Script \emph{listing-scraper.sh} goes through Valhalla listings and downloads th
 Script \emph{listing-parser.py} process the downloaded pages and generates the \emph{listings.csv} file with information about listings.
 \emph{Seller-scraper.py} opens \emph{listings.csv} and downloads HTML source of vendors' profile pages. 
 \emph{Seller-parser.py} proccesses the downloaded vendor's profile pages and generates \emph{sellers.csv} and \emph{feedbacks.csv}.
-The variables and data types stored in these csv files are described in chapter \label{Valhalla cryptomarket webscraping}
+The variables and data types stored in these csv files are described in chapter \ref{Valhalla cryptomarket webscraping}
 in tables \ref{datalist}, \ref{datavendor} and \ref{datafeedback}. We used these generated csv files for
 assembling Valhalla cryptomarket statistics contained in the last chapter.
 
@@ -1337,7 +1337,7 @@ blockchain consists of roughly 150GB of data and these must be inserted into dat
 and processed by heuristics.
 For setting the application up on server and having users access it remotely,
 different options viable for storing and retrieving data on server hardware
-(eg. a significant RAM extension to decrease swapping delays) can be considered.
+can be considered (eg. a significant RAM extension to enable storing the whole database in RAM). 
 
 \printbibliography{}
 
