--- a/diplomka-text/fi-pdflatex.tex
+++ b/diplomka-text/fi-pdflatex.tex
@@ -792,7 +792,7 @@ saw that EXIF metadata were indeed overwritten.
 
 We tested whether every transaction happening on drug market has its counter transaction
 in bitcoin blockchain.
-We deposited some Bitcoins to cryptomarket and bought a licit virtually deliverable
+We deposited some bitcoins to cryptomarket and bought a licit virtually deliverable
 product (Guide on weightlifting) and checked if anything happened to the deposited bitcoins.
 There was no follow up transaction happening for weeks after the deposit transaction was done.
 This means that market doesn't transfer bitcoins when service or goods are bought.
@@ -852,7 +852,7 @@ Vendor or user can also request withdrawing their bitcoins from the cryptomarket
 the cryptomarket decreases its account balance and sends bitcoin to the user's address.
 
 For identifying bitcoin addresses owned by the Valhalla cryptomarket, we 
-deposited small amount of Bitcoins to our user accounts on Valhalla cryptomarket and
+deposited small amount of bitcoins to our user accounts on Valhalla cryptomarket and
 performed multiple withdrawals by smaller amount than the deposited one, to receive bitcoins back.
 When we requested bitcoin withdrawals, we received bitcoins from different addresses
 than the deposit one. We consider the deposit address and all addresses we received
