--- a/diplomka-text/fi-pdflatex.tex
+++ b/diplomka-text/fi-pdflatex.tex
@@ -928,12 +928,12 @@ Afterwards, we have checked, how much bitcoins have these
 identities received between 14. 1. and 14. 2. We scraped the Valhalla cryptomarket between 14. 2. and 15. 2.
 and received data from feedback pages, which we used to estimate 
 the minimal amount of bitcoins users spent over the previous month on Valhalla market.
-We estimated in chapter \ref{stats}, that users spent at least 527\,730 EUR during that one month period.
-With average bitcoin price 8\,219EUR it roughly equals to 64.2 bitcoins.
+We estimated in chapter \ref{stats}, that users spent at least 527\,730~EUR during that one month period.
+With average bitcoin price 8\,219~EUR it roughly equals to 64.2~bitcoins.
 The amount of bitcions these identities received is also in table \ref{cluster}.
 Our heuristics were not enough to cluster majority of market's transactions/addresses as one identity.
 Hovewer, with just two accounts, 2 deposits and 20 withdrawals, we were able to identify 5.71 (9 \%) bitcoins out of estimated
-64.2~bitcoins the market received within that one month timeframe.
+\mbox{64.2~bitcoins} the market received within that one month timeframe.
 
 \begin{table}
     \caption{Mapping of found identities to addresses used in deposits and withdrawals}
@@ -1076,7 +1076,7 @@ The histogram does not show 19 vendors with more than 200 listings.
 
 The vendors were shipping drugs from 39 distinct countries.
 The occurence of countries as the shipping origin can be found in the table \ref{shipcount}.
-The table \ref{richvendors} lists countries of vendors that have achieved 10\,000EUR (150 vendors, 15 \% ) or more in their revenue.
+The table \ref{richvendors} lists countries of vendors that have achieved 10\,000~EUR (150 vendors, 15 \% ) or more in their revenue.
 Valhalla was originally estabilished as a local Finnish crypto market,
 which might be the reason for surprisingly many vendors shipping from Finland and also large percentage
 of Finns among high revenue vendors. They might be on the market since
@@ -1138,14 +1138,14 @@ Unknown & 69 \\
 \end{figure}
 
 We looked at the total revenue of vendors, as depicted in figure \ref{total-rev}. 
-The total revenue mentioned in the vendor's profile page is capped at 10 000 Eur.
+The total revenue mentioned in the vendor's profile page is capped at 10\,000~EUR.
 There are two major groups of vendors regarded to their revenue. 
 Majority (598 vendors, 60 \%) of vendors have not had any\newline positive or negative feedbacks and all of these vendors
-(except for 3)\newline earned less than 300EUR on cryptomarket over their lifetime.
+(except for 3)\newline earned less than 300~EUR on cryptomarket over their lifetime.
 Please note we were able to scrape just the vendors with active listings,
 so there might be much more vendors who stopped using Valhalla after
 not being able to earn substantional amount of money.
-The second group is 150 vendors (15 \%) who earned 10 000 EUR or more.
+The second group is 150 vendors (15 \%) who earned 10\,000~EUR or more.
 
 Vendors, who had high revenue, maintained high ratio of positive feedbacks.
 When counting only vendors with more than 10 reviews (304 vendors, 31 \%),
@@ -1165,17 +1165,17 @@ The figure \ref{listingxprice} shows distribution of prices of all listings in
  and therefore generate multiple or no feedbacks. We expect that the price distribution
  in these feedbacks reflects more accuratelly the prices of the goods or services
  that are actually bought at market, because feedbacks can be given only by users who
- bought something from vendor. We calculated price of listings in EUR as 
+ bought something from vendor. We calculated price of listings in euros as 
  price in bitcoin multiplied by the average price of bitcoin for 30 days before the scraping
- (8219 EUR for 14.1.2018 - 14.2.2018, daily prices taken from blockchain.info).
+ (8219~EUR for 14.1.2018 - 14.2.2018, daily prices taken from blockchain.info).
  
- The average price of listing is 336.2 Eur (1368.2 SD!) with median of 71.3 Eur,
- while feedbacks had average 82.7Eur (150.7 SD) with median of 55 Eur.
-  There were 1533 (6.05 \%) active listings with price greater than 1000 EUR but 
-  only 22 (0.3 \%) feedbacks with price greater than 1000EUR.
+ The average price of listing is 336.2~EUR (1368.2 SD!) with median of 71.3~EUR,
+ while feedbacks had average 82.7~EUR (150.7 SD) with median of 55~EUR.
+  There were 1533 (6.05 \%) active listings with price greater than 1\,000~EUR but 
+  only 22 (0.3 \%) feedbacks with price greater than 1\,000~EUR.
  The price distributions in \ref{listingxprice} show,
  that while there is a lot of free or very expensive listings,
- the majority (5937, 93 \%) of trades were between 0 and 200 EUR.
+ the majority (5937, 93 \%) of trades were between 0 and 200~EUR.
  There were 115 free listings on the market,
  but none of them was mentioned in the feedbacks.
  The free listings had titles like "CARDING SERVICE *FREE*",
@@ -1205,7 +1205,7 @@ can be given only if the trade happened on cryptomarket, while
 trades happening with no given feedbacks are also possible.
 The total revenue over one month, amount of listigs, feedbacks and market shares for given categories 
 can be found in the table \ref{categories}.
-Market share is a revenue of category divided by total revenue from all categories, which was 527\,730 EUR.
+Market share is a revenue of category divided by total revenue from all categories, which was 527\,730~EUR.
 The average price of occured trades was similar in each category
 with two outliers. Opiates, which have a high price/dose ratio and 
 self-defense, which only had 4 trades, 2 of them custom listings and 2 of them guns.
@@ -1221,7 +1221,7 @@ by cryptomarket escrow service, in case of a pre-arranged deal.
 \hspace*{-1cm}
     \label{categories}
     \begin{tabular}{|l|l|l|l|l|l|}
-Category & listings & feedbacks &  \multicolumn{1}{|p{2cm}|}{\centering revenue \\ in EUR }& \multicolumn{1}{|p{2cm}|}{\centering average price \\ in EUR } &\multicolumn{1}{|p{2cm}|}{\centering market \\ share } \\
+Category & listings & feedbacks &  \multicolumn{1}{|p{2cm}|}{\centering revenue \\ in euros }& \multicolumn{1}{|p{2cm}|}{\centering average price \\ in euros } &\multicolumn{1}{|p{2cm}|}{\centering market \\ share } \\
 Cannabis & 5139 & 1883 & 135693 & 72 & 27.6 \% \\
 Stimulants & 3493 & 1043 & 108157 & 103 & 22 \% \\
 Opiates & 1662 & 489 & 83135 & 170 & 16.9 \% \\
@@ -1241,7 +1241,7 @@ Classifieds &  649 & 18 & 2182 &  121  & 0.4 \% \\
 
 Most of the vendors had listings in only a few categories.
 The graph \ref{catxrev} shows the amount of vendors with given revenue and number of different subcategories they have 
-active listings in. Most vendors sell goods only in a few categories, hovewer, vendors with 10\,000EUR or more in
+active listings in. Most vendors sell goods only in a few categories, hovewer, vendors with 10\,000~EUR or more in
 revenue tend to have listings in more categories. The boxchart \ref{boxcat} shows the distribution of vendors revenue
 based on the category they were selling in. We have not counted vendors with 0 revenue for the boxchart.
 If a vendor was selling in multiple categories, we divided his revenue by the number of categories and counted him within all of them.
@@ -1275,13 +1275,13 @@ trades and revenue, because when considering buyers total spending and trades, w
 the number of identified buyers. Buyers total spending and total performed trades were rounded to only a few distinct values, so the
 following statistics are just estimates.
 
-Each buyer have on average bought goods for 1176EUR through all his trades on Valhalla market.
-Just 129 (5 \%) of buyers had bought goods worth 10\,000EUR or more,
- 1289 (50 \%) buyers spent 500EUR or less.
+Each buyer have on average bought goods for 1\,176~EUR through all his trades on Valhalla market.
+Just 129 (5 \%) of buyers had bought goods worth 10\,000~EUR or more,
+ 1289 (50 \%) buyers spent 500~EUR or less.
 This distribution is similar to revenue distribution of vendors, where
 vast majority of actors transfer just small amounts of value through Valhalla market and
 merely an extremely small percentge of actors trade on the market on a bigger scale.
-The average price of one trade (82.7 EUR) and the average of lifetime spendage (1176EUR)
+The average price of one trade (82.7~EUR) and the average of lifetime spendage (1\,176~EUR)
 is way below the amount someone who actively resell drugs for profit would buy.
 The distribution of buyers total spendage is on the figure \ref{buyerxspend}.
 
